Further modification to main script

--- a/Otodom.ipynb
+++ b/Otodom.ipynb
@@ -1496,85 +1496,281 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PCA method didn't give expected (positive) results, so lets try converting address just like other categorical variables and use gridsearch to search for best parameters of models"
+    "PCA method didn't give expected (positive) results, so lets try converting address(city) just like other categorical variables before and use gridsearch to search for best parameters of models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top10_cities = data[\"city\"].groupby(by=data[\"city\"]).count().sort_values(ascending=False).head(10).index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[~data[\"city\"].isin(top10_cities), \"city\"] = \"inne\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.drop([\"street\",\"district\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.get_dummies(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.drop([\"price\"], axis=1)\n",
+    "y = data[\"price\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = Imputer(strategy=\"mean\", axis=0)\n",
+    "X_train = pd.DataFrame(imputer.fit_transform(X_train), columns=X.columns)\n",
+    "X_test = pd.DataFrame(imputer.transform(X_test), columns=X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = [\n",
+    "    (\"scale\", MinMaxScaler())\n",
+    "]\n",
+    "\n",
+    "models = [\n",
+    "    (\"linear\",LinearRegression()),\n",
+    "    (\"forest\",RandomForestRegressor()),\n",
+    "    (\"svr\",SVR())\n",
+    "]\n",
+    "\n",
+    "param_grids = [\n",
+    "    {\"linear__normalize\":[True,False]},\n",
+    "    {\"forest__n_estimators\":[10,100,1000],\"forest__min_samples_leaf\":[5,25,50,100],\"forest__max_depth\":[5,10,15,25]},\n",
+    "    {\"svr__C\":[0.1,1,10,100]}\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_fit_time': array([ 0.07505353,  0.06304487]),\n",
+      " 'mean_score_time': array([ 0.00917347,  0.00800618]),\n",
+      " 'mean_test_score': array([-0.91575204, -0.91781872]),\n",
+      " 'mean_train_score': array([ 0.47206338,  0.47205035]),\n",
+      " 'param_linear__normalize': masked_array(data = [True False],\n",
+      "             mask = [False False],\n",
+      "       fill_value = ?)\n",
+      ",\n",
+      " 'params': [{'linear__normalize': True}, {'linear__normalize': False}],\n",
+      " 'rank_test_score': array([1, 2]),\n",
+      " 'split0_test_score': array([ 0.44852878,  0.44851993]),\n",
+      " 'split0_train_score': array([ 0.42577109,  0.42577105]),\n",
+      " 'split1_test_score': array([-2.27574774, -2.27570014]),\n",
+      " 'split1_train_score': array([ 0.55496362,  0.55496354]),\n",
+      " 'split2_test_score': array([-0.92003715, -0.92627594]),\n",
+      " 'split2_train_score': array([ 0.43545542,  0.43541647]),\n",
+      " 'std_fit_time': array([ 0.00521674,  0.00245145]),\n",
+      " 'std_score_time': array([ 0.00047126,  0.00040832]),\n",
+      " 'std_test_score': array([ 1.11218536,  1.11217426]),\n",
+      " 'std_train_score': array([ 0.0587525 ,  0.05876057])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_models = []\n",
+    "for i, model in enumerate(models):\n",
+    "    \n",
+    "    steps = base.copy()\n",
+    "    steps.append(model)\n",
+    "    pipe = Pipeline(steps)\n",
+    "\n",
+    "    gs = GridSearchCV(estimator=pipe, param_grid=param_grids[i])\n",
+    "    gs.fit(X_train,y_train)\n",
+    "    pprint.pprint(gs.cv_results_)\n",
+    "    best_models.append((models[i][0], gs.best_params_, gs.best_estimator_))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mInit signature:\u001b[0m \u001b[0mSVR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'rbf'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'auto'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoef0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshrinking\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mSource:\u001b[0m        \n",
+       "\u001b[1;32mclass\u001b[0m \u001b[0mSVR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseLibSVM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRegressorMixin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[1;34m\"\"\"Epsilon-Support Vector Regression.\n",
+       "\n",
+       "    The free parameters in the model are C and epsilon.\n",
+       "\n",
+       "    The implementation is based on libsvm.\n",
+       "\n",
+       "    Read more in the :ref:`User Guide <svm_regression>`.\n",
+       "\n",
+       "    Parameters\n",
+       "    ----------\n",
+       "    C : float, optional (default=1.0)\n",
+       "        Penalty parameter C of the error term.\n",
+       "\n",
+       "    epsilon : float, optional (default=0.1)\n",
+       "         Epsilon in the epsilon-SVR model. It specifies the epsilon-tube\n",
+       "         within which no penalty is associated in the training loss function\n",
+       "         with points predicted within a distance epsilon from the actual\n",
+       "         value.\n",
+       "\n",
+       "    kernel : string, optional (default='rbf')\n",
+       "         Specifies the kernel type to be used in the algorithm.\n",
+       "         It must be one of 'linear', 'poly', 'rbf', 'sigmoid', 'precomputed' or\n",
+       "         a callable.\n",
+       "         If none is given, 'rbf' will be used. If a callable is given it is\n",
+       "         used to precompute the kernel matrix.\n",
+       "\n",
+       "    degree : int, optional (default=3)\n",
+       "        Degree of the polynomial kernel function ('poly').\n",
+       "        Ignored by all other kernels.\n",
+       "\n",
+       "    gamma : float, optional (default='auto')\n",
+       "        Kernel coefficient for 'rbf', 'poly' and 'sigmoid'.\n",
+       "        If gamma is 'auto' then 1/n_features will be used instead.\n",
+       "\n",
+       "    coef0 : float, optional (default=0.0)\n",
+       "        Independent term in kernel function.\n",
+       "        It is only significant in 'poly' and 'sigmoid'.\n",
+       "\n",
+       "    shrinking : boolean, optional (default=True)\n",
+       "        Whether to use the shrinking heuristic.\n",
+       "\n",
+       "    tol : float, optional (default=1e-3)\n",
+       "        Tolerance for stopping criterion.\n",
+       "\n",
+       "    cache_size : float, optional\n",
+       "        Specify the size of the kernel cache (in MB).\n",
+       "\n",
+       "    verbose : bool, default: False\n",
+       "        Enable verbose output. Note that this setting takes advantage of a\n",
+       "        per-process runtime setting in libsvm that, if enabled, may not work\n",
+       "        properly in a multithreaded context.\n",
+       "\n",
+       "    max_iter : int, optional (default=-1)\n",
+       "        Hard limit on iterations within solver, or -1 for no limit.\n",
+       "\n",
+       "    Attributes\n",
+       "    ----------\n",
+       "    support_ : array-like, shape = [n_SV]\n",
+       "        Indices of support vectors.\n",
+       "\n",
+       "    support_vectors_ : array-like, shape = [nSV, n_features]\n",
+       "        Support vectors.\n",
+       "\n",
+       "    dual_coef_ : array, shape = [1, n_SV]\n",
+       "        Coefficients of the support vector in the decision function.\n",
+       "\n",
+       "    coef_ : array, shape = [1, n_features]\n",
+       "        Weights assigned to the features (coefficients in the primal\n",
+       "        problem). This is only available in the case of a linear kernel.\n",
+       "\n",
+       "        `coef_` is readonly property derived from `dual_coef_` and\n",
+       "        `support_vectors_`.\n",
+       "\n",
+       "    intercept_ : array, shape = [1]\n",
+       "        Constants in decision function.\n",
+       "\n",
+       "    sample_weight : array-like, shape = [n_samples]\n",
+       "            Individual weights for each sample\n",
+       "\n",
+       "    Examples\n",
+       "    --------\n",
+       "    >>> from sklearn.svm import SVR\n",
+       "    >>> import numpy as np\n",
+       "    >>> n_samples, n_features = 10, 5\n",
+       "    >>> np.random.seed(0)\n",
+       "    >>> y = np.random.randn(n_samples)\n",
+       "    >>> X = np.random.randn(n_samples, n_features)\n",
+       "    >>> clf = SVR(C=1.0, epsilon=0.2)\n",
+       "    >>> clf.fit(X, y) #doctest: +NORMALIZE_WHITESPACE\n",
+       "    SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='auto',\n",
+       "        kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n",
+       "\n",
+       "    See also\n",
+       "    --------\n",
+       "    NuSVR\n",
+       "        Support Vector Machine for regression implemented using libsvm\n",
+       "        using a parameter to control the number of support vectors.\n",
+       "\n",
+       "    LinearSVR\n",
+       "        Scalable Linear Support Vector Machine for regression\n",
+       "        implemented using liblinear.\n",
+       "    \"\"\"\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'rbf'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'auto'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoef0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m                 \u001b[0mtol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshrinking\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m                 \u001b[0mcache_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m        \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSVR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m            \u001b[1;34m'epsilon_svr'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdegree\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m            \u001b[0mcoef0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcoef0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnu\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m            \u001b[0mshrinking\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mshrinking\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprobability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcache_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m            \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_iter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mFile:\u001b[0m           c:\\programdata\\anaconda3\\lib\\site-packages\\sklearn\\svm\\classes.py\n",
+       "\u001b[1;31mType:\u001b[0m           ABCMeta\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for model in best_models:\n",
+    "    print(\"{} with params {}\\n R^2: {}, MSE: {}\".format(model[0], \n",
+    "                                          model[1],\n",
+    "                                          r2_score(y_test,model[2].predict(X_test)),\n",
+    "                                          mean_squared_error(y_test,model[2].predict(X_test))))"
+   ]
   },
   {
    "cell_type": "code",
